# hgvs_normerlizer

./: README.md  hgvs_to_minimal_maf_test.xlsx  setup.cfg
hgvsnorm_cli/: cli.py  utils.py
