[metadata]
name = hgvsnorm-cli
version = 0.2.2
description = Normalize HGVS strings to standard forms (c./p.) with change tracking and parallelization
author = NCDC Bioinformatics
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires =
    pandas>=1.3
    openpyxl>=3.1
python_requires = >=3.8

[options.entry_points]
console_scripts =
    hgvsnorm = hgvsnorm_cli.cli:main
